crates/figstash-query/tests/snapshots/offline_queries__agent_outline_depth_two.snap
---
source: crates/figstash-query/tests/offline_queries.rs
expression: outline.root
---
{
  "id": "0:0",
  "name": "Document",
  "nodeType": "DOCUMENT",
  "depth": 0,
  "pathIds": [
    "0:0"
  ],
  "childCount": 1,
  "children": [
    {
      "id": "1:1",
      "name": "Page",
      "nodeType": "CANVAS",
      "depth": 1,
      "pathIds": [
        "0:0",
        "1:1"
      ],
      "childCount": 4,
      "children": [
        {
          "id": "2:1",
          "name": "Card",
          "nodeType": "FRAME",
          "bounds": {
            "x": 10.0,
            "y": 20.0,
            "width": 320.0,
            "height": 180.0
          },
          "depth": 2,
          "pathIds": [
            "0:0",
            "1:1",
            "2:1"
          ],
          "childCount": 2
        },
        {
          "id": "3:1",
          "name": "Button",
          "nodeType": "COMPONENT",
          "depth": 2,
          "pathIds": [
            "0:0",
            "1:1",
            "3:1"
          ],
          "childCount": 0
        },
        {
          "id": "4:1",
          "name": "Button Instance",
          "nodeType": "INSTANCE",
          "depth": 2,
          "pathIds": [
            "0:0",
            "1:1",
            "4:1"
          ],
          "childCount": 0
        },
        {
          "id": "5:1",
          "name": "Future Node",
          "nodeType": "UNKNOWN",
          "depth": 2,
          "pathIds": [
            "0:0",
            "1:1",
            "5:1"
          ],
          "childCount": 0
        }
      ]
    }
  ]
}
