crates/figstash-query/tests/snapshots/offline_queries__compact_card.snap
---
source: crates/figstash-query/tests/offline_queries.rs
expression: compact.node
---
{
  "appearance": {
    "cornerRadius": 12,
    "effects": [
      {
        "offset": {
          "x": 0,
          "y": 2
        },
        "radius": 8,
        "type": "DROP_SHADOW",
        "visible": true
      }
    ],
    "fills": [
      {
        "color": {
          "a": 1,
          "b": 1,
          "g": 1,
          "r": 1
        },
        "type": "SOLID"
      }
    ],
    "strokes": [
      {
        "color": {
          "a": 1,
          "b": 0.8,
          "g": 0.8,
          "r": 0.8
        },
        "type": "SOLID"
      }
    ]
  },
  "bounds": {
    "height": 180.0,
    "width": 320.0,
    "x": 10.0,
    "y": 20.0
  },
  "children": [
    {
      "appearance": {
        "cornerRadius": 12,
        "fills": [
          {
            "color": {
              "a": 1,
              "b": 1,
              "g": 1,
              "r": 1
            },
            "type": "SOLID"
          }
        ]
      },
      "bounds": {
        "height": 24.0,
        "width": 160.0,
        "x": 26.0,
        "y": 36.0
      },
      "depth": 3,
      "id": "2:2",
      "layout": {
        "itemSpacing": 8
      },
      "name": "Title",
      "nodeType": "TEXT",
      "pathIds": [
        "0:0",
        "1:1",
        "2:1",
        "2:2"
      ],
      "styles": {
        "text": "style-text-1"
      },
      "text": {
        "characters": "Hello Agent",
        "style": {
          "fontFamily": "Inter",
          "fontSize": 20,
          "fontWeight": 600,
          "lineHeightPx": 24,
          "textAlignHorizontal": "LEFT"
        }
      }
    },
    {
      "appearance": {
        "fills": [
          {
            "imageRef": "image-ref-1",
            "scaleMode": "FILL",
            "type": "IMAGE"
          }
        ]
      },
      "depth": 3,
      "id": "2:3",
      "imageReferences": [
        "image-ref-1"
      ],
      "name": "Photo",
      "nodeType": "RECTANGLE",
      "pathIds": [
        "0:0",
        "1:1",
        "2:1",
        "2:3"
      ]
    }
  ],
  "depth": 2,
  "exportSettings": [
    {
      "constraint": {
        "type": "SCALE",
        "value": 2
      },
      "format": "PNG",
      "suffix": "@2x"
    }
  ],
  "id": "2:1",
  "layout": {
    "counterAxisSizingMode": "FIXED",
    "itemSpacing": 8,
    "layoutMode": "VERTICAL",
    "paddingBottom": 16,
    "paddingLeft": 16,
    "paddingRight": 16,
    "paddingTop": 16,
    "primaryAxisSizingMode": "AUTO"
  },
  "name": "Card",
  "nodeType": "FRAME",
  "pathIds": [
    "0:0",
    "1:1",
    "2:1"
  ],
  "styles": {
    "effect": "style-effect-1",
    "fill": "style-fill-1"
  }
}
